--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 	"dependencies": {
 		"express": "^4.16.3",
 		"node-fetch": "^2.1.2",
-		"socket.io": "^2.1.1"
+		"socket.io": "^2.1.1",
+		"body-parser": "~1.18.2",
+		"cookie-parser": "~1.4.3",
+		"cors": "^2.8.4"
 	}
 }
